[gd_scene load_steps=4 format=3 uid="uid://dgy8ovf5qfuu8"]

[ext_resource type="Script" path="res://ui/main_menu/main_menu.gd" id="1_3tlhq"]
[ext_resource type="PackedScene" uid="uid://dq5bvoaxuu83w" path="res://ui/main_menu/options/options_menu.tscn" id="1_a0f17"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_esli7"]
bg_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3tlhq")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_esli7")

[node name="MenuButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.92
anchor_right = 0.5
anchor_bottom = 0.92
offset_left = -125.0
offset_top = -401.0
offset_right = 125.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 15
alignment = 1

[node name="ContinueButton" type="Button" parent="MenuButtons"]
layout_mode = 2
disabled = true
text = "Continue"

[node name="NewGameButton" type="Button" parent="MenuButtons"]
layout_mode = 2
text = "New Game"

[node name="OptionsButton" type="Button" parent="MenuButtons"]
layout_mode = 2
text = "Options"

[node name="ExitButton" type="Button" parent="MenuButtons"]
layout_mode = 2
text = "Exit"

[node name="OptionsMenu" parent="." instance=ExtResource("1_a0f17")]
visible = false
layout_mode = 1

[connection signal="pressed" from="MenuButtons/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="MenuButtons/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="MenuButtons/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MenuButtons/ExitButton" to="." method="_on_exit_button_pressed"]
